@@ -108,6 +108,8 @@ Applications
  * Voicemail now supports per mailbox settings for folders when using IMAP storage.
    Previously the folder could only be set per context, but has now been extended 
    using the imapfolder option.
+ * Voicemail now allows the pager date format to be specified separately from the
+   email date format.
 
 Dialplan Functions
 ------------------
